Validação da consulta com RequestParam